--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-leaflet/core": "1.0.2",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,8 +13,10 @@
     "@types/react-dom": "^17.0.7",
     "bootstrap": "4.6",
     "formik": "^2.2.6",
+    "leaflet": "1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "3.1.0",
     "react-markdown": "^7.0.0",
     "react-router-dom": "5.2",
     "react-scripts": "4.0.3",
@@ -47,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.4",
     "@types/react-router-dom": "^5.1.7"
   }
 }
