--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.2.6",
     "leaflet": "1.7.1",
     "react": "^17.0.2",
+    "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^17.0.2",
     "react-leaflet": "3.1.0",
     "react-markdown": "^7.0.0",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.7.4",
+    "@types/react-bootstrap-typeahead": "^5.1.4",
     "@types/react-router-dom": "^5.1.7"
   }
 }
