--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.10",
     "@types/react-dom": "^17.0.7",
+    "axios": "^0.21.1",
     "bootstrap": "4.6",
     "formik": "^2.2.6",
     "leaflet": "1.7.1",
