--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-markdown": "^7.0.0",
     "react-router-dom": "5.2",
     "react-scripts": "4.0.3",
+    "sweetalert2": "^11.3.0",
     "typed-react-markdown": "^0.1.0",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2",
