--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "4.6",
     "formik": "^2.2.6",
     "leaflet": "1.7.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^17.0.2",
